# handler/delete_user_handler.go
@@ -1,0 +1,43 @@
+package handler
+
+import (
+	"fmt"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/lidiagaldino/go-first-api/schemas"
+)
+
+// @BasePath /api/v1
+
+// @Summary Delete user
+// @Description Delete a user
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param id path int true "User Identification"
+// @Success 200 {object} DeleteUserResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /user/{id} [delete]
+func DeleteUserHandler(ctx *gin.Context) {
+	id := ctx.Param("id")
+	if id == "" {
+		sendError(ctx, http.StatusBadRequest, errParamIsRequired("id", "param").Error())
+		return
+	}
+	user := schemas.User{}
+
+	if err := db.First(&user, id).Error; err != nil {
+		sendError(ctx, http.StatusNotFound, fmt.Sprintf("user with id %s not found", id))
+		return
+	}
+
+	if err := db.Delete(&user).Error; err != nil {
+		sendError(ctx, http.StatusInternalServerError, fmt.Sprintf("error deleting user with id %s", id))
+		return
+	}
+
+	sendSuccess(ctx, "delete-user", user)
+}
