# handler/show_user_handler.go
@@ -1,0 +1,37 @@
+package handler
+
+import (
+	"fmt"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/lidiagaldino/go-first-api/schemas"
+)
+
+// @BasePath /api/v1
+
+// @Summary Show user
+// @Description Show a user
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param id path int true "User identification"
+// @Success 200 {object} ShowUserResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /user/{id} [get]
+func ShowUserHandler(ctx *gin.Context) {
+	id := ctx.Param("id")
+	if id == "" {
+		sendError(ctx, http.StatusBadRequest, errParamIsRequired("id", "param").Error())
+		return
+	}
+	user := schemas.User{}
+
+	if err := db.First(&user, id).Error; err != nil {
+		sendError(ctx, http.StatusNotFound, fmt.Sprintf("user with id %s not found", id))
+		return
+	}
+
+	sendSuccess(ctx, "show-user", user)
+}
