# handler/update_user_handler.go
@@ -1,0 +1,53 @@
+package handler
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/lidiagaldino/go-first-api/schemas"
+)
+
+// @BasePath /api/v1
+
+// @Summary Update user
+// @Description Update a user
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param id path int true "User Identification"
+// @Param user body UpdateUserRequest true "User data to Update"
+// @Success 200 {object} UpdateUserResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /user/{id} [put]
+func UpdateUserHandler(ctx *gin.Context) {
+	id := ctx.Param("id")
+	request := UpdateUserRequest{}
+
+	ctx.BindJSON(&request)
+
+	if err := request.Validate(); err != nil {
+		logger.Errorf("error validating request: %s", err.Error())
+		sendError(ctx, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	if id == "" {
+		sendError(ctx, http.StatusBadRequest, errParamIsRequired("id", "param").Error())
+		return
+	}
+
+	user := schemas.User{
+		Login:    request.Login,
+		Password: request.Password,
+		Name:     request.Name,
+	}
+
+	if err := db.Model(&user).Where("id = ?", id).Updates(user).Error; err != nil {
+		sendError(ctx, http.StatusInternalServerError, "error updating user")
+		return
+	}
+
+	sendSuccess(ctx, "update-user", user)
+}
